# perfectimprints

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  README.md  TASKS.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.github/workflows/: ci.yml  monthly-rebuild.yml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/about/: page.tsx
app/blog/: page.tsx
app/contact/: page.tsx
app/faqs/: page.tsx
app/privacy/: page.tsx
app/rush-promotional-products/: page.tsx
app/search/: page.tsx
app/style-guide/: page.tsx
app/terms/: page.tsx
app/videos/: page.tsx
components/blog/: BlogCard.tsx  BlogGrid.tsx  BlogSidebar.tsx  BlogSubmenu.tsx
components/category/: CTABanner.tsx  FAQsAccordion.tsx  FilterSidebar.tsx  Pagination.tsx  ProductCard.tsx  ProductGrid.tsx  SortDropdown.tsx
components/forms/: LeadForm.tsx  (+1 more)
data/: README.md
docs/: ARCHITECTURE.md  development-plan.md  internal-plan.md  launch-runbook.md  mpower-export.md  qa-matrix.md  sample-review.md  sanity-quickstart.md  scrape-results.md
lib/: affiliate-url.test.ts  affiliate-url.ts  categories.ts  nav-data.ts  pi-urls.ts  utils.ts
public/: robots.txt
sanity/: desk-structure.ts  env.ts  package.json  pnpm-lock.yaml  sanity.cli.ts  sanity.config.ts
scripts/: README.md
scripts/scrapers/blogs/: README.md  __init__.py  pyproject.toml  scraper.py
scripts/scrapers/geiger/: README.md  __init__.py  checkpoint.py  client.py  config.py  discover.py  mapping.py  mapping_overrides.json  memberships.py  products.py  pyproject.toml  run.py
(+117 files in other folders)
